--- a/minesweeper.css
+++ b/minesweeper.css
@@ -87,3 +87,4 @@ table.tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-
 table.tftable th {font-size:12px;background-color:#acc8cc;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;text-align:left;}
 table.tftable tr {background-color:#d4e3e5;}
 table.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;}
+<!-- Jogo Feito Por Pablo Silva Meu Facebook: https://www.facebook.com/pablorsiilva -->
